@@ -1,3 +1,7 @@
+2005-03-17  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* Enabled fall back techniques for the terrain material for GFX cards without shader support.
+
 2005-03-16  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* Added kdevelop project file.
